Implement working packages for all srvices

--- a/lib/data/data.yml
+++ b/lib/data/data.yml
@@ -19,3 +19,13 @@
   :hints: 2
   :level: :easy
   :date: 24/04/2019 15:01
+- :name: vasya
+  :attempts: 10
+  :hints: 0
+  :level: :easy
+  :date: 01/07/2021 20:25
+- :name: lolkek
+  :attempts: 4
+  :hints: 2
+  :level: :easy
+  :date: 01/07/2021 20:28
